--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@layer base {
+  ::-webkit-scrollbar {
+    width: 16px; /* スクロールバー全体の幅 */
+    background-color: #f9f9f9; /* スクロールバーの背景色 */
+  }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px; /* スクロールバーの丸み */
+    box-shadow: inset 0 0 10px 10px #909090; /* スクロールバーの色 */
+    border: solid 4px transparent; /* スクロールバーの左右の余白 */
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer components {
+  .beforeAnswer {
+    display: block;
+  }
+  .afterAnswer {
+    display: none;
+  }
 }
